# django-admin-mcp

./: .gitignore  .pre-commit-config.yaml  =0.9.0  =4.0  AGENTS.md  IMPLEMENTATION_SUMMARY.md  MCP_GUIDE.md  Makefile  README.md  TEST_RESULTS.md  mkdocs.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml  publish.yml  tests.yml
django_admin_mcp/: __init__.py  admin.py  apps.py  mixin.py  models.py  server.py  urls.py  views.py
django_admin_mcp/handlers/: __init__.py  actions.py  base.py  crud.py  decorators.py  errors.py  meta.py  relations.py
django_admin_mcp/migrations/: 0001_initial.py  0002_mcptoken_expires_at.py  0002_mcptoken_groups_mcptoken_permissions.py  0002_mcptoken_salt_mcptoken_token_hash_and_more.py  0002_secure_token_storage.py  0003_mcptoken_groups_mcptoken_permissions_mcptoken_user.py  0003_mcptoken_mcp_token_active_hash_idx.py
docs/: README.md  _config.yml  changelog.md  contributing.md  index.html  index.md  openapi.yaml
example/: .mcp.json.example  README.md  demo.py  test_package.py
tests/: README.md  __init__.py  conftest.py  factories.py  models.py  settings.py  test_100_percent.py  test_absolutely_final.py  test_admin.py  test_coverage_100.py  test_crud.py  test_edge_cases.py  test_final_coverage.py  test_final_push.py  test_handlers_actions.py  test_handlers_base.py  test_handlers_crud.py  test_handlers_meta.py  test_handlers_relations.py  test_http.py  test_mixin.py  test_permissions.py  test_protocol.py  test_server.py  test_token_security.py  test_tools_registry.py  urls.py
(+55 files in other folders)
